--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-native": "^0.22.2",
     "react-native-button": "^1.4.2",
     "react-native-meteor": "^1.0.0-beta21",
-    "react-native-scrollable-tab-view": "^0.4.0"
+    "react-native-scrollable-tab-view": "^0.4.0",
+    "react-native-simple-router": "^0.8.4"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
